--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
          http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          version="3.0">
 
-    <display-name>Simple Java Web App</display-name>
+    <display-name>Simple Java Web Application</display-name>
 
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
